fix: using spacing and comment in type

--- a/projects/ion/src/styles/presets-styles/input.scss
+++ b/projects/ion/src/styles/presets-styles/input.scss
@@ -13,7 +13,7 @@
 
 .ion-input {
   border: 1px solid $neutral-5;
-  border-radius: 8px;
+  border-radius: spacing(1);
   width: calc(100% - 2 * spacing(1.5));
   position: relative;
   line-height: 0;
